[project]
name = "graphmind"
version = "0.1.0"
description = "API-aware MCP server for Microsoft Graph — always fresh, never hallucinated"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "numpy>=1.26,<2",
    "sentence-transformers>=3.0.0",
    "msal>=1.29.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
graphmind = "graphmind.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
